--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   "author": "Thiago S Ramos",
   "license": "MIT",
   "devDependencies": {
+    "@flydotio/dockerfile": "^0.4.3",
     "nodemon": "^3.0.1"
   },
   "dependencies": {
